feat: add mobile disable options for firework and player scripts

--- a/config/_default/params.yml
+++ b/config/_default/params.yml
@@ -437,6 +437,7 @@ animation:
 # see https://github.com/D-Sketon/mouse-firework
 firework:
   enable: true
+  disable_on_mobile: false
   options:
     excludeElements: ["a", "button"]
     particles:
@@ -605,6 +606,7 @@ pace:
 # Experimental
 # Please turn on pjax to use this feature
 player:
+  disable_on_mobile: false
   position: before_sidebar # before_sidebar | after_sidebar | after_widget
   # if you enable meting, you must enable aplayer first
   aplayer:
