--- a/config/_default/params.yml
+++ b/config/_default/params.yml
@@ -301,7 +301,7 @@ math:
 # global control of the comment system
 # you can use multiple comment systems at the same time
 # load order: localStorage(user manually selects) -> default
-# -> valine -> waline -> twikoo -> gitalk -> giscus
+# -> valine -> waline -> twikoo -> gitalk -> giscus -> disqus
 comment:
   # comment system title
   title:
@@ -383,6 +383,12 @@ giscus:
   inputPosition: bottom
   # commentTheme: preferred_color_scheme invalid
   # lang: zh-CN # deprecated, use html.lang instead
+
+# https://disqus.com
+disqus:
+  enable: false
+  shortname: # your disqus shortname
+  count: true
 
 ########################################
 # Search
